--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <div class="container">
     <div class="animation" id="lottieAnimation"></div>
     <h1 style="color: #333;">Website Under Construction</h1>
-    <p>We are currently working on something awesome. Please check back later!</p>
-    <p>If you have any inquiries, please email us at <a href="mailto:solutions@renegadetechnology.com">solutions@renegadetechnology.com</a>.</p>
+    <p>We are currently working on something awesome. Please check back soon!</p>
+    <p>For all inquiries, please email us at <a href="mailto:solutions@renegadetechnology.com">solutions@renegadetechnology.com</a>.</p>
   </div>
 
   <script>
